[package]
name = "fuse-ext4-rs"
version = "0.1.0"
authors = ["Aaron Ash <aaron.ash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bootsector = "0.1"
fuse_mt = "0.5.1"
#ext4 = "0.9"
ext4 = { git = "https://github.com/FauxFaux/ext4-rs" }
libc = "0.2"
positioned-io = "0.2"
time = "0.1"

[dev-dependencies]
cntr-fuse-sys = "0.4.0"
nix = "0.19"
